[tool.poetry]
name = "repl_python3_PythonNicholasUtils"
version = "0.1.0"
description = ""
authors = ["nicholasxwang <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Werkzeug = "^2.0.2"
schoolopy = "^0.2.1"
selenium = "^4.1.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
